Don't freeze when the create wallet dialog is dismissed

libsecret doesn't like invalid dbus object paths as
the second parameter of the signal Completed of the Prompt
interface, and will cause a freeze with a nested glib
event loop stuck in secret_collection_create_sync

use an object path parameter identical to what gnome-keychain
uses, which is just a path to "/"

BUG:504678