src/runtime/ksecretd/kwalletfreedesktopprompt.cpp
@@ -42,7 +42,9 @@ void KWalletFreedesktopPrompt::Dismiss()
                                                   QStringLiteral("org.freedesktop.Secret.Prompt"),
                                                   QStringLiteral("Completed"));
     QVariantList args;
-    args << true << QVariant::fromValue(QDBusVariant(QVariant::fromValue(QList<QDBusObjectPath>())));
+    // LibSecret wants a "valid" QDBusObjectPath here or it will just freeze
+    // Gnome-keyring also sends "/" as object path when the create dialog gets dismissed
+    args << true << QVariant::fromValue(QDBusVariant(QVariant::fromValue(QDBusObjectPath(QStringLiteral("/")))));
     msg.setArguments(args);
     QDBusConnection::sessionBus().send(msg);
     QDBusConnection::sessionBus().unregisterObject(fdoObjectPath().path());
